-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 18
-
Component/s: hotspot
-
b25
Replay is not actually resolving the "@cpi" constant pool references, so it can return a null MethodHandle object.
See failure 2 and replay_bug_02.log in 8277301 to reproduce.
See failure 2 and replay_bug_02.log in 8277301 to reproduce.
- relates to
-
JDK-8277301 ciReplay: tag mismatch: wrong class files?
-
- Open
-