8277310: ciReplay: @cpi MethodHandle references not resolved

Reviewed-by: chagedorn, thartmann